src/components/verification-grid-tile/css/style.css
:host {
  --decision-color: var(--oe-panel-color);
  --selected-border-size: 4px;

  /*
    It is okay to change the display property here because we do not expect
    users to be using the oe-verification-grid-tile component because it is
    an internal component that should only be used by us in the verification
    grid component.

    If we ever want to make this component publicly available, we should
    consider removing the display property from the :host selector.
  */
  display: flex;
  flex-direction: column;
}

.spectrogram-container {
  margin: 0px;
  background-color: var(--oe-panel-color);
  padding: var(--oe-spacing);
}

.tile-container {
  position: relative;
  border-radius: var(--oe-border-rounding);
  box-shadow: var(--oe-backdrop-shadow) var(--oe-panel-color);
  cursor: pointer;
  margin-bottom: 0;
  padding: var(--selected-border-size);
  background-color: var(--oe-panel-color);
  overflow: hidden;

  /*
    This minimum grid tile size is reflected in the dynamic grid layout helper
    see src/helpers/controllers/dynamic-grid-size.ts#L40
  */
  min-width: 300px;
  min-height: 300px;

  transition:
    border-color var(--oe-animation-time) ease-out,
    border-size var(--oe-animation-time) ease-out;

  &:hover {
    box-shadow: var(--oe-backdrop-shadow) var(--oe-selected-color);
  }
}

.vertically-fill {
  display: flex;
  flex-direction: column;
  flex: 1 1;
  /* min-height: 0px; */
}

.figure-head {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--oe-spacing);
}

/* TODO: maybe add a border here */
.selected {
  background-color: var(--oe-selected-color);
}

.hidden {
  position: absolute;
  opacity: 0;
}

.keyboard-hint {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(0%, calc(-50% - 1rem));
  z-index: 2;
  font-size: 2rem;
}

.overlay-text {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
  font-size: 4em;

  background-color: var(--oe-panel-color);
  border-radius: var(--oe-border-rounding);
}

.progress-meter {
  --progress-meter-rounding: var(--oe-border-rounding);

  display: flex;
  width: 100%;
  min-height: var(--oe-spacing);
  border: var(--oe-border-width) solid var(--oe-border-color);
  border-radius: var(--progress-meter-rounding);

  /*
    Only apply spacing to the top and bottom of the progress meter because we
    want the progress meter to be vertically aligned to all the other elements
    in the verification grid tile.
  */
  margin-top: var(--oe-spacing);
  margin-bottom: var(--oe-spacing);
}

.progress-meter-segment {
  flex: 1 0;

  /* This default background will be overwritten if a decision is applied */
  background-color: var(--oe-undecided-color);
}

/*
  We use a border-right to separate each progress-meter-item. But we do not want
  to use a border-right on the last item because it would result in a double
  border on the last item. One from the progress-meter-item and one from the
  progress-meter itself.
*/
:not(:last-child) > .progress-meter-segment {
  border-right: var(--oe-border-width) solid var(--oe-border-color);
}

/*
  We apply the same amount of rounding to each progress meter item that was
  applied to the progress meter so that the first and last items are flush with
  the progress meter.
  If we did not round the first and last items, they would have a sharp edge
  and cause the inner edge of the border to not be the same radius as the outer
  borders edge.
  We don't round every edge because we want the individual items to be separated
  with a straight edge.
*/
:first-child > .progress-meter-segment {
  border-top-left-radius: var(--progress-meter-rounding);
  border-bottom-left-radius: var(--progress-meter-rounding);
}

:last-child > .progress-meter-segment {
  border-top-right-radius: var(--progress-meter-rounding);
  border-bottom-right-radius: var(--progress-meter-rounding);
}

